# zapret-gui

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  zapret_gui.ui
